--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,10 @@
 
 /* Your CSS Code here. */
+.block {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .inline {
+    display: inline;
+    margin-right: 10px;
